# shodan

./: .gitmodules  Cargo.toml  Dockerfile  src.ies
.github/workflows/: build_docker.yml
dalle/: Cargo.toml
dalle/src/: lib.rs
db/: Cargo.toml
db/migrations/2022-05-07-160413_create_jeopardy/: down.sql  up.sql
db/migrations/2022-05-08-111613_create_jeopardy_categories/: down.sql  up.sql
db/migrations/2022-05-08-114149_create_jeopardy_questions/: down.sql  up.sql
db/migrations/2022-05-09-231238_create_posted_jeopardy_categories/: down.sql  up.sql
db/src/: lib.rs  models.rs  schema.rs
do_spaces/: Cargo.toml
do_spaces/src/: lib.rs
jeopardy/: Cargo.toml
jeopardy/src/: lib.rs
raytracer/: Cargo.toml
raytracer-viz/: Cargo.toml
raytracer-viz/src/: main.rs
raytracer/src/: lib.rs  old.rs
raytracer/src/examples/: hall.rs  main.rs
src/: dalle_support.rs  db_support.rs  grim.rs  images.rs  jeopardy.rs  main.rs  roll.rs  serenity_impls.rs  spirits_awaken.rs  wumpus.rs
src/grim/: logic.rs
stable-diffusion/: Cargo.toml
stable-diffusion/src/: lib.rs
