[workspace]
members = [
    "raytracer",
]

[package]
name = "spookybot"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
dotenv = "0.15"
eyre = "0.6"

csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde-human-readable"] }

png = "0.17"
raytracer = { path = "./raytracer", package = "spooky-raytracer" }

spirits-awaken = { path = "../spirits-awaken" }