[workspace]
members = [
    "raytracer",
    "raytracer-viz",
    "db",
    "jeopardy",
]

[package]
name = "spookybot"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
dotenv = "0.15"
eyre = "0.6"

db = { path = "./db" }

png = "0.17"
raytracer = { path = "./raytracer", package = "spooky-raytracer" }
eisenscript = { path = "../eisenscript" }
mint = "0.5"

spirits-awaken = { path = "../spirits-awaken" }

caith = "4.2"