[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
diesel = { version = "2.0.0-rc.0", default-features = false, features = ["without-deprecated", "postgres", "extras"] }
uuid = { version = "1.0.0-alpha.1", features = ["v4"] }
chrono = "0.4"

eyre = "0.6"

jeopardy = { path = "../jeopardy" }