[package]
name = "raytracer-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raytracer = { path = "../raytracer", package = "spooky-raytracer" }
eisenscript = { path = "../../eisenscript" }
mint = "0.5"

glutin = "0.28"
solstice-2d = "0.2"
rand = "0.8"