[package]
name = "spooky-raytracer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
glam = { version = "0.20", features = ["mint"] }
rayon = "1"
bytemuck = { version = "1.9", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg_rayon"] }