[package]
name = "stable-diffusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-timer = "3.0.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
